--- a/db_app/package.json
+++ b/db_app/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http-status-codes": "^1.3.0",
+    "mongodb": "^3.1.6"
   }
 }
